--- a/style/screen.css
+++ b/style/screen.css
@@ -109,11 +109,21 @@ body {
     display: inline-block;
     font-size: 1.2rem;
     padding: 1rem 0;
+    margin: 0 .5rem;
+    cursor: pointer;
 
     border-bottom: 2px solid transparent;
 }
 
 .c-nav-list__item:hover {
+    border-color: var(--theme-color-x-dark);
+}
+
+.c-nav-list__input:checked + .c-nav-list__item {
+    border-color: var(--theme-color-base);
+}
+
+.c-nav-list__input:checked + .c-nav-list__item {
     border-color: var(--theme-color-base);
 }
 
